--- a/recipe-page/src/scss/_base.scss
+++ b/recipe-page/src/scss/_base.scss
@@ -18,14 +18,17 @@
   box-sizing: border-box;
 }
 
+ul {
+  list-style-position: inside;
+}
+
 /* ---MEDIA QUERIES--- */
 
 .container {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  border: 2px solid red;
 }
 
 /* xs */
