--- a/recipe-page/src/scss/_variables.scss
+++ b/recipe-page/src/scss/_variables.scss
@@ -1,9 +1,9 @@
-$rose-800: hsl(332, 51%, 32%);
-$rose-50: hsl(330, 100%, 98%);
+$rose-800: #7a284e;
+$rose-50: #fff7fb;
 
-$stone-900: hsl(24, 5%, 18%);
-$stone-600: hsl(30, 10%, 34%);
-$stone-150: hsl(30, 18%, 87%);
-$stone-100: hsl(30, 54%, 90%);
+$stone-900: #312e2c;
+$stone-600: #5f564d;
+$stone-150: #e3ddd7;
+$stone-100: #f3e5d7;
 
-$brown-800: hsl(14, 45%, 36%);
+$brown-800: #854632;
