--- a/recipe-page/src/scss/_base.scss
+++ b/recipe-page/src/scss/_base.scss
@@ -1,3 +1,6 @@
+@use './mixins' as *;
+@use './variables' as *;
+
 @font-face {
   font-family: 'Outfit';
   src: url('../assets/fonts/outfit/Outfit-VariableFont_wght.ttf')
@@ -22,13 +25,16 @@ ul {
   list-style-position: inside;
 }
 
+body {
+  background-color: $stone-100;
+}
+
 /* ---MEDIA QUERIES--- */
 
 .container {
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  border: 2px solid red;
 }
 
 /* xs */
@@ -48,19 +54,11 @@ ul {
   .container {
     max-width: 768px;
   }
-
-  .card {
-    width: 450px;
-  }
 }
 /* lg */
 @media (min-width: 1024px) {
   .container {
     max-width: 1024px;
-  }
-
-  .card {
-    width: 380px;
   }
 }
 /* xl */
@@ -68,18 +66,10 @@ ul {
   .container {
     max-width: 1280px;
   }
-
-  .card {
-    width: 380px;
-  }
 }
 /* 2xl */
 @media (min-width: 1536px) {
   .container {
     max-width: 1536px;
-  }
-
-  .card {
-    width: 380px;
   }
 }
