add font colors

--- a/recipe-page/src/components/recipe/ingredients/ingredients.module.scss
+++ b/recipe-page/src/components/recipe/ingredients/ingredients.module.scss
@@ -16,6 +16,10 @@
     li {
       @include list-styling;
 
+      span {
+        margin-left: 16px;
+      }
+
       &::before {
         @include list-bullet-styling;
       }
