--- a/recipe-page/src/components/recipe/nutrition/nutrition.module.scss
+++ b/recipe-page/src/components/recipe/nutrition/nutrition.module.scss
@@ -12,6 +12,7 @@
 
   p {
     @include text-preset-4;
+    color: $stone-600;
   }
 
   ul {
@@ -27,6 +28,7 @@
       display: flex;
       gap: 16px;
       @include text-preset-4;
+      color: $stone-600;
 
       & > span {
         flex: 1;
