--- a/product-preview-card-component/src/scss/_base.scss
+++ b/product-preview-card-component/src/scss/_base.scss
@@ -23,7 +23,9 @@ body {
   min-height: 100vh;
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  gap: 20px;
 }
 
 /* xs */
