--- a/four-card-feature-section/src/components/Header/header.scss
+++ b/four-card-feature-section/src/components/Header/header.scss
@@ -2,7 +2,6 @@
 
 .header {
   color: $very-dark-blue;
-  font-family: Poppins;
   text-align: center;
   max-width: 540px;
   margin: auto;
@@ -12,9 +11,8 @@
     display: flex;
     flex-direction: column;
     font-weight: 200;
-    font-size: 24px;
+    font-size: 1.5rem;
     letter-spacing: 0.25px;
-    margin-bottom: 16px;
 
     &--bold {
       font-weight: 600;
