--- a/four-card-feature-section/src/components/Card/card.scss
+++ b/four-card-feature-section/src/components/Card/card.scss
@@ -1,12 +1,12 @@
 @use '../../scss/variables' as *;
 
 .card {
+  max-width: 350px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   border-radius: 8px;
   border-top: 8px solid;
   color: $very-dark-blue;
-  margin-bottom: 1.5rem;
   padding: 1.75rem;
   display: flex;
   flex-direction: column;
@@ -27,6 +27,8 @@
 
   &__logo {
     align-self: end;
+    width: 57px;
+    height: 57px;
   }
 }
 
@@ -44,4 +46,12 @@
 
 .card--blue {
   border-color: $blue;
+}
+
+/* 2xl */
+@media (min-width: 1280px) {
+  .card__logo {
+    width: 67px;
+    height: 67px;
+  }
 }
