--- a/four-card-feature-section/src/components/Main/main.scss
+++ b/four-card-feature-section/src/components/Main/main.scss
@@ -1,3 +1,43 @@
 main {
   margin-bottom: 3rem;
+
+  .card-list {
+    display: grid;
+    justify-content: center;
+    gap: 1.5rem;
+
+    &__item {
+      list-style: none;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .card-list {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(2, minmax(auto, 350px));
+    column-gap: 2rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .card-list {
+    grid-template-columns: repeat(3, 350px);
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+
+    .card {
+      padding: 2rem;
+    }
+
+    &__item:first-child {
+      grid-row: 1 / -1;
+    }
+
+    &__item:last-child {
+      grid-column: 3 / 4;
+      grid-row: 1 / 3;
+    }
+  }
 }
