--- a/testimonials-grid-section/src/scss/app.scss
+++ b/testimonials-grid-section/src/scss/app.scss
@@ -4,16 +4,54 @@
   width: 100%;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   min-height: 100vh;
   padding-top: rem(70);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-ul.cards-list {
+.cards-list {
   display: grid;
-  grid-template-columns: 250px;
+  grid-template-columns: rem(350);
   justify-content: center;
+  gap: rem(24);
+}
+
+.cards-list__item:first-child {
+  img {
+    border: rem(3) solid #a775f1;
+    box-sizing: content-box;
+  }
+
+  .personal-data,
+  .card__title {
+    color: white;
+  }
+}
+
+.footer {
+  margin: auto;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  font-size: 1.2rem;
+  text-align: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.cards-list__item:nth-child(4) {
+  img {
+    border: rem(3) solid #733fc8;
+    box-sizing: content-box;
+  }
+
+  .card__title {
+    color: $light-grayish-blue;
+  }
 }
 
 /* xs */
@@ -48,6 +86,24 @@ ul.cards-list {
 @media (min-width: 1280px) {
   .container {
     max-width: 1280px;
+  }
+
+  .cards-list {
+    grid-template-columns: repeat(4, rem(255));
+    gap: rem(30);
+
+    &__item:first-child {
+      grid-column: 1 / 3;
+    }
+
+    &__item:nth-child(4) {
+      grid-column: 2 / 4;
+    }
+
+    &__item:last-child {
+      grid-column: 4 / 5;
+      grid-row: 1 / 3;
+    }
   }
 }
 
