use lead & main for class and property names

--- a/testimonials-grid-section/src/scss/_card.scss
+++ b/testimonials-grid-section/src/scss/_card.scss
@@ -49,12 +49,12 @@ article.card {
     gap: rem(18);
   }
 
-  .card__quote-title {
+  .card__quote-lead {
     font-weight: 600;
     font-size: rem(20);
   }
 
-  .card__quote-text {
+  .card__quote-main {
     font-weight: 500;
     font-size: rem(13);
     line-height: rem(18);
