Implement header component and add styling

--- a/meet-landing-page/src/scss/_app.scss
+++ b/meet-landing-page/src/scss/_app.scss
@@ -2,5 +2,50 @@
 @use './mixins' as *;
 
 .container {
-  @include text-preset-1;
+  width: 100%;
+  min-height: 100vh;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* xs */
+@media (min-width: rem(475)) {
+  .container {
+    max-width: rem(475);
+  }
+}
+
+/* sm */
+@media (min-width: rem(640)) {
+  .container {
+    max-width: rem(640);
+  }
+}
+
+/* md */
+@media (min-width: rem(768)) {
+  .container {
+    max-width: rem(768);
+  }
+}
+
+/* lg */
+@media (min-width: rem(1024)) {
+  .container {
+    max-width: rem(1024);
+  }
+}
+
+/* xl */
+@media (min-width: rem(1280)) {
+  .container {
+    max-width: rem(1280);
+  }
+}
+
+/* 2xl */
+@media (min-width: rem(1536)) {
+  .container {
+    max-width: rem(1536);
+  }
 }
