--- a/meet-landing-page/src/scss/_mixins.scss
+++ b/meet-landing-page/src/scss/_mixins.scss
@@ -7,7 +7,7 @@
   letter-spacing: 0;
 }
 
-@mixin test-preset-2() {
+@mixin text-preset-2() {
   font-size: rem(40);
   font-weight: 900;
   line-height: 110%;
