Implement footer component and add styling

--- a/meet-landing-page/src/scss/_components.scss
+++ b/meet-landing-page/src/scss/_components.scss
@@ -7,7 +7,7 @@
   text-decoration: none;
   color: #ffffff;
   border-radius: rem(250);
-  transition: background-color ease-in 0.3s;
+  transition: background-color ease-out 0.3s;
 }
 
 .btn--blue {
