--- a/meet-landing-page/src/scss/_header.scss
+++ b/meet-landing-page/src/scss/_header.scss
@@ -2,6 +2,10 @@
 @use './mixins' as *;
 
 .header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   &__logo-section {
     padding-top: rem(48);
   }
@@ -20,9 +24,19 @@
     gap: rem(48);
   }
 
+  &__hero-img-half {
+    display: flex;
+    justify-content: center;
+  }
+
   &__hero-img {
-    height: rem(160);
+    min-height: rem(160);
+    max-width: rem(820);
     object-fit: cover;
+  }
+
+  .img-desktop {
+    display: none;
   }
 
   &__hero-text-half {
@@ -30,6 +44,7 @@
     padding-right: rem(35);
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: rem(24);
   }
 
@@ -38,6 +53,7 @@
     text-align: center;
     color: $slate-900;
     font-size: rem(42);
+    max-width: rem(440);
   }
 
   &__hero-description {
@@ -45,6 +61,7 @@
     text-align: center;
     color: $slate-600;
     font-size: rem(16);
+    max-width: rem(440);
   }
 
   &__button-group {
@@ -52,5 +69,50 @@
     flex-direction: column;
     gap: rem(16);
     align-items: center;
+  }
+}
+
+@media (min-width: rem(768)) {
+  .header__button-group {
+    flex-direction: row;
+  }
+
+  .header__hero-section {
+    gap: rem(72);
+  }
+}
+
+@media (min-width: rem(1440)) {
+  .header {
+    .img-desktop {
+      display: block;
+      max-width: rem(394);
+    }
+
+    &__hero-section {
+      height: rem(480);
+    }
+
+    &__hero-img-half {
+      display: none;
+    }
+
+    &__hero-img-left {
+      align-self: start;
+    }
+
+    &__hero-img-right {
+      align-self: end;
+    }
+
+    &__hero-section {
+      flex-direction: row;
+      padding-bottom: rem(64);
+    }
+
+    &__hero-text-half {
+      gap: rem(32);
+      align-self: center;
+    }
   }
 }
