--- a/meet-landing-page/src/scss/_main.scss
+++ b/meet-landing-page/src/scss/_main.scss
@@ -16,6 +16,7 @@
 
   &__img {
     border-radius: rem(10);
+    max-width: rem(160);
   }
 
   &__text-half {
@@ -23,6 +24,8 @@
     flex-direction: column;
     gap: rem(32);
     text-align: center;
+    max-width: rem(500);
+    align-items: center;
   }
 
   &__title-group {
@@ -48,5 +51,51 @@
     @include text-preset-4;
     font-size: rem(16);
     color: $slate-600;
+  }
+}
+
+@media (min-width: rem(640)) {
+  .main {
+    padding-top: rem(56);
+    padding-bottom: rem(64);
+
+    &__image-half {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
+    &__img {
+      max-width: rem(200);
+      max-height: rem(200);
+    }
+
+    &__title-group {
+      max-width: rem(445);
+    }
+  }
+}
+
+@media (min-width: rem(768)) {
+  .main__image-half {
+    gap: rem(24);
+  }
+}
+
+@media (min-width: rem(1024)) {
+  .main {
+    padding-top: rem(56);
+    padding-bottom: rem(72);
+
+    &__image-half {
+      gap: rem(32);
+    }
+
+    &__img {
+      max-width: rem(256);
+      max-height: rem(256);
+    }
+
+    &__text-half {
+      max-width: rem(544);
+    }
   }
 }
