--- a/meet-landing-page/src/scss/_footer.scss
+++ b/meet-landing-page/src/scss/_footer.scss
@@ -3,6 +3,7 @@
 
 .footer {
   width: 100%;
+  z-index: 1;
 
   & > .number {
     margin-bottom: rem(-28);
@@ -29,6 +30,7 @@
     left: 0;
     right: 0;
     opacity: 0.9;
+    z-index: -1;
   }
 
   &__content {
