--- a/article-preview-component/src/styles/main.css
+++ b/article-preview-component/src/styles/main.css
@@ -31,6 +31,10 @@ img {
   object-fit: cover;
 }
 
+a {
+  text-decoration: none;
+}
+
 /* xs */
 @media (min-width: 29.6875rem) {
   .container {
@@ -88,14 +92,15 @@ img {
   padding: 0rem 2rem;
   padding-bottom: 1.25rem;
 }
-.card__lead-text {
+.card__title {
   color: hsl(217, 19%, 35%);
   font-weight: 700;
   line-height: 1.5rem;
   letter-spacing: 0.0125rem;
   margin-bottom: 0.75rem;
+  font-size: 1rem;
 }
-.card__main-text {
+.card__text {
   color: hsl(214, 17%, 51%);
   font-weight: 500;
   font-size: 0.8125rem;
@@ -103,36 +108,14 @@ img {
   letter-spacing: 0.0075rem;
   margin-bottom: 2rem;
 }
-.card__footer-section {
+.card__footer {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+.card__author {
+  display: flex;
   gap: 1rem;
-}
-.card .non-visible {
-  visibility: hidden;
-}
-.card__share-section {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  align-items: center;
-  background-color: hsl(217, 19%, 35%);
-  padding: 1rem 2rem;
-  border-radius: 0 0 0.625rem 0.625rem;
-}
-.card__socials-icons-container {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-.card__share-text {
-  font-size: 0.8125rem;
-  line-height: 1.25rem;
-  letter-spacing: 0.3125rem;
-  color: hsl(212, 23%, 69%);
-  text-transform: uppercase;
 }
 .card__avatar {
   width: 2.5rem;
@@ -166,11 +149,13 @@ img {
   border-radius: 50%;
   cursor: pointer;
   background-color: hsl(210, 46%, 95%);
+  z-index: 20;
   /* Removes the highlight effect */
   -webkit-tap-highlight-color: transparent;
 }
-.card__share-btn--active {
+.card__share-btn.active {
   background-color: hsl(214, 17%, 51%);
+  margin-bottom: 1rem;
 }
 .card__share-img {
   position: absolute;
@@ -181,11 +166,45 @@ img {
   height: 0.8125rem;
   filter: invert(55%) sepia(4%) saturate(2112%) hue-rotate(175deg) brightness(89%) contrast(87%);
 }
-.card__share-img--active {
+.card__share-img.active {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
 }
+.card__share-options {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  visibility: hidden;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  background-color: hsl(217, 19%, 35%);
+  padding: 1.375rem 2rem;
+  border-radius: 0 0 0.625rem 0.625rem;
+  z-index: 1;
+}
+.card__share-options.active {
+  visibility: visible;
+}
+.card__socials-icons-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.card__share-text {
+  font-size: 0.8125rem;
+  line-height: 1.25rem;
+  letter-spacing: 0.3125rem;
+  color: hsl(212, 23%, 69%);
+  text-transform: uppercase;
+}
 
-@media (min-width: 64rem) {
+@media (max-width: 48rem) {
+  .card__text-half.pb-0 {
+    padding-bottom: 0;
+  }
+}
+@media (min-width: 48rem) {
   .container {
     min-height: 100vh;
     padding: 0;
@@ -211,44 +230,26 @@ img {
   .card__text-half {
     padding: 2rem 2.5rem;
   }
-  .card__lead-text {
+  .card__title {
     font-size: 1.25rem;
     line-height: 1.75rem;
     letter-spacing: 0.015625rem;
   }
-  .card__main-text {
+  .card__text {
     margin-bottom: 1.25rem;
   }
-  .card__footer-section {
-    padding: 0;
-    height: auto;
+  .card__share-btn.active {
     margin: 0;
   }
-  .card__avatar, .card__share-text {
-    margin-left: 0;
-  }
-  .card__share-btn {
-    margin-right: 0;
-  }
-  .card__share-section {
-    flex-direction: column;
-    background: none;
-  }
-  .card__socials-icons-container {
-    background-color: hsl(217, 19%, 35%);
-    padding: 1.125rem 2.25rem;
-    border-radius: 0.625rem;
-  }
-  .card__share-icons-desktop {
+  .card__share-options.active {
     position: absolute;
     top: 8.0625rem;
     left: 34.375rem;
     width: 15.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    height: 3.4375rem;
+    border-radius: 10px;
   }
-  .card__share-icons-desktop::after {
+  .card__share-options.active::after {
     content: "";
     height: 10px;
     width: 10px;
@@ -256,6 +257,10 @@ img {
     width: 24px;
     border-left: 12px solid transparent;
     border-right: 12px solid transparent;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 100%);
   }
 }
 .hidden {
