--- a/newsletter-sign-up-form/src/styles/main.css
+++ b/newsletter-sign-up-form/src/styles/main.css
@@ -1,12 +1,12 @@
 @font-face {
   font-family: "Roboto";
-  src: url("../../../assets/fonts/Roboto-Regular.ttf") format("truetype");
-  font-weight: zabar;
+  src: url("/assets/fonts/Roboto-Regular.ttf") format("truetype");
+  font-weight: regular;
   font-style: normal;
 }
 @font-face {
   font-family: "Roboto";
-  src: url("../../../assets/fonts/Roboto-Bold.ttf") format("truetype");
+  src: url("/assets/fonts/Roboto-Bold.ttf") format("truetype");
   font-weight: bold;
   font-size: normal;
 }
