--- a/newsletter-sign-up-form/src/styles/sass/components/_button.scss
+++ b/newsletter-sign-up-form/src/styles/sass/components/_button.scss
@@ -11,16 +11,40 @@
   width: 100%;
   padding: 18px 46px 14px 48px;
   font-family: 'Roboto';
+  position: relative;
+
+  & span {
+    position: relative;
+  }
 }
 
 @media (min-width: 1024px) {
   .btn:hover {
     color: white;
     cursor: pointer;
+  }
+
+  .btn::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    border-radius: 8px;
+
+    opacity: 0;
+    transition: opacity 200ms;
+
     background: linear-gradient(
       180deg,
       rgba(255, 106, 58, 1) 0%,
       rgba(255, 82, 123, 1) 100%
     );
+  }
+
+  .btn:hover::before {
+    opacity: 1;
   }
 }
